--- a/main.html
+++ b/main.html
@@ -9,11 +9,11 @@
     <div class="full">
 
         <div class="main_logo">
-            <img src="img3.jpg" style="width:50%;"/>
+            <img src="img3.jpg" style="width:60%;"/>
         </div>
 
         <div class="detail_logo">
-            <img src="img2.jpg" style="width:80%;"/>
+            <img src="img2.jpg" style="width:100%;"/>
         </div>
 
         <div class="text">
@@ -21,12 +21,12 @@
         </div>
 
         <div class="last_logo">
-            <img src="img1.jpg" style="width:40%;"/>
+            <img src="img1.jpg" style="width:60%;"/>
         </div>
 
         <button type="button" class="box_login" onclick="window.open('login.html') ">로그인</button>
 
-        <button type="button" class="box_signup" onclick="window.open('login.html') ">회원가입</button>
+        <button type="button" class="box_signup" onclick="window.open('signup.html') ">회원가입</button>
 
 
 
